--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 
 <ul>
   
+  <li>
+    <span class="date">2018/03/23</span>
+    <a href="/posts/my-first-post/">My First Post</a>
+  </li>
+  
 </ul>
 
   <footer>
