--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 <ul>
   
   <li>
+    <span class="date">2018/03/24</span>
+    <a href="/posts/dotnet/">Dotnet</a>
+  </li>
+  
+  <li>
+    <span class="date">2018/03/24</span>
+    <a href="/posts/travis/">Travis</a>
+  </li>
+  
+  <li>
     <span class="date">2018/03/23</span>
     <a href="/posts/my-first-post/">My First Post</a>
   </li>
